# ccsds123

./: .gitignore  CMakeLists.txt  MILESTONES.md  Makefile  Makefile.config  README.md  simulate.sh
aie/: aie_kernel.cc
aie/graph/: ccsds123_graph.cpp
cpp/: CMakeLists.txt
cpp/include/modules/: residual_map.hpp  residual_unmap.hpp
cpp/include/modules/detail/: bit_math.hpp
cpp/src/modules/: residual_map.cpp  residual_unmap.cpp
cpp/tests/: local_diff_vectors.cpp  residual_map_tests.cpp
cpp/tests/data/: hdl_residual_map_edges.txt
docs/: 123x0b2c3.txt  Adaptation_of_the_CCSDS_123.0-B-2_Standard_for_RGB_Video_Compression.txt  INSTRUCTIONS_FOR_VITIS_AND_VITIS_LIBRARIES.txt  encoder_investigation_2025.md  hdl_cpp_encoder_comparison.md  system_overview.md
hdl/cocotb/local_diff/: Makefile  test_local_diff.py
hdl/scripts/: create_project_and_simulate.tcl
hdl/tb/: synth_params.vhd  top_tb.v
include/ccsds123/: modules.hpp
python_reference/: __init__.py
src/: Ccsds123Codec.cpp  ccsds123_decode_main.cpp
src/cpp/: CMakeLists.txt
src/cpp/include/: Ccsds123Codec.hpp
src/cpp/src/: Ccsds123Codec.cpp  ccsds123_decode_main.cpp  ccsds123_encode_main.cpp  modules.cpp
src/cpp/tests/: codec_tests.cpp  local_diff_vectors.cpp
src/hdl/scripts/: create_project_and_simulate.tcl
src/hdl/src/: local_diff.vhd  local_diff_store.vhd  top.vhd  weight_update.vhd
src/hdl/tb/: impl_params.v  top_tb.v
src/python_reference/: local_diff.py
tests/: codec_tests.cpp  validation.cpp
tests/vectors/: local_diff_vectors.csv
tools/: ccsds_lib.py  compare_bitstreams.py  compare_video_alt1.py  conf.json  conf_video_full.json  conf_video_single.json  convert_video_to_channels.py  gen_impl_params.py  gen_local_diff_vectors.py  generate_frames.py  generate_gradient.py  hdl_compare.py
